--- a/sample-chat/build.gradle
+++ b/sample-chat/build.gradle
@@ -14,7 +14,8 @@ android {
 }
 
 dependencies {
-    compile files('../jars/quickblox-android-sdk-core-2.2.1.jar', '../jars/quickblox-android-sdk-chat-2.2.1.jar')
+    compile 'com.quickblox:quickblox-android-sdk-core:2.2.1@jar'
+    compile 'com.quickblox:quickblox-android-sdk-chat:2.2.1@jar'
     compile 'com.android.support:appcompat-v7:19.0.0'
     compile project(':pull-to-refresh')
 }
