--- a/sample-messages/build.gradle
+++ b/sample-messages/build.gradle
@@ -14,8 +14,10 @@ android {
 }
 
 dependencies {
-    compile files('../jars/quickblox-android-sdk-core-2.2.1.jar', '../jars/quickblox-android-sdk-messages-2.2.1.jar')
-    compile 'com.google.android.gms:play-services:4.2.+'
-    compile 'com.android.support:support-v4:19.0.+'
-    compile 'com.android.support:appcompat-v7:18.0.+'
+
+    compile 'com.quickblox:quickblox-android-sdk-core:2.2.1@jar'
+    compile 'com.quickblox:quickblox-android-sdk-messages:2.2.1@jar'
+    compile 'com.android.support:support-v4:22.1.0'
+    compile 'com.android.support:appcompat-v7:22.1.0'
+    compile 'com.google.android.gms:play-services:7.0.0'
 }
