--- a/sample-users/build.gradle
+++ b/sample-users/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
 
@@ -14,6 +15,6 @@ android {
 }
 
 dependencies {
-    compile files('../jars/quickblox-android-sdk-core-2.2.1.jar')
+    compile 'com.quickblox:quickblox-android-sdk-core:2.2.1'
     compile 'com.android.support:appcompat-v7:18.0.+'
 }
