--- a/sample-videochat-webrtc-new/build.gradle
+++ b/sample-videochat-webrtc-new/build.gradle
@@ -36,10 +36,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('../jars/quickblox-android-sdk-core-2.2.1.jar')
-    compile files('../jars/quickblox-android-sdk-videochat-webrtc-2.2.1.jar')
-    compile files('../jars/quickblox-android-sdk-chat-2.2.1.jar')
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.quickblox:quickblox-android-sdk-core:2.2.1'
+    compile 'com.quickblox:quickblox-android-sdk-chat:2.2.1'
+    compile 'com.quickblox:quickblox-android-sdk-videochat-webrtc:2.2.1'
+    compile "com.android.support:appcompat-v7:$rootProject.androidSupportVersion"
     compile project(':pull-to-refresh')
     compile files('libs/android-support-v4.jar')
     compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
