--- a/sample-videochat/build.gradle
+++ b/sample-videochat/build.gradle
@@ -6,8 +6,9 @@ android {
 }
 
 dependencies {
-    compile files('../jars/quickblox-android-sdk-core-2.2.1.jar',
-            '../jars/quickblox-android-sdk-videochat-2.2.1.jar', '../jars/quickblox-android-sdk-chat-2.2.1.jar')
+    compile 'com.quickblox:quickblox-android-sdk-core:2.2.1'
+    compile 'com.quickblox:quickblox-android-sdk-chat:2.2.1'
+    compile 'com.quickblox:quickblox-android-sdk-videochat:2.2.1'
 }
 
 
