--- a/sample-videochat-webrtc-new/src/main/AndroidManifest.xml
+++ b/sample-videochat-webrtc-new/src/main/AndroidManifest.xml
@@ -15,21 +15,24 @@
             android:name=".activities.ListUsersActivity"
             android:label="@string/app_name"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:screenOrientation="portrait">
-
+            android:screenOrientation="portrait"
+            android:finishOnTaskLaunch="true"
+            android:clearTaskOnLaunch="true"
+            android:taskAffinity="com.quickblox.sample.videochatwebrtc">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".activities.OpponentsActivity"
+            android:taskAffinity="com.quickblox.sample.videochatwebrtc"
             android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activities.CallActivity"
             android:configChanges="keyboardHidden|screenSize|orientation"
+            android:taskAffinity="com.quickblox.sample.videochatwebrtc"
             android:screenOrientation="portrait">
         </activity>
         <service
