--- a/sample-videochat-webrtc-new/src/main/AndroidManifest.xml
+++ b/sample-videochat-webrtc-new/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo_qb"
+        android:logo="@drawable/logo_qb"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.ListUsersActivity"
-            android:label="@string/app_name"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
             android:finishOnTaskLaunch="true"
@@ -25,9 +25,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activities.BaseLogginedUserActivity"
+>
+
+        </activity>
+        <activity
             android:name=".activities.OpponentsActivity"
             android:taskAffinity="com.quickblox.sample.videochatwebrtc"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask">
         </activity>
         <activity
             android:name=".activities.CallActivity"
