--- a/sample-videochat-webrtc-new/src/main/AndroidManifest.xml
+++ b/sample-videochat-webrtc-new/src/main/AndroidManifest.xml
@@ -45,11 +45,11 @@
 
         <receiver
             android:enabled="true"
-            android:name=".services.AutoStartServiceBroadcastReceiver"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+            android:name=".services.AutoStartServiceBroadcastReceiver">
+            <!--android:permission="android.permission.RECEIVE_BOOT_COMPLETED">-->
 
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="com.tereha.MY_AUTO_START" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
