--- a/sample-videochat-webrtc-new/src/main/AndroidManifest.xml
+++ b/sample-videochat-webrtc-new/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
             android:finishOnTaskLaunch="true"
-            android:clearTaskOnLaunch="true"
             android:taskAffinity="com.quickblox.sample.videochatwebrtc">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,7 +35,8 @@
             android:name=".activities.CallActivity"
             android:configChanges="keyboardHidden|screenSize|orientation"
             android:taskAffinity="com.quickblox.sample.videochatwebrtc"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:allowTaskReparenting="true">
         </activity>
 
         <service
@@ -45,11 +45,11 @@
 
         <receiver
             android:enabled="true"
-            android:name=".services.AutoStartServiceBroadcastReceiver">
-            <!--android:permission="android.permission.RECEIVE_BOOT_COMPLETED">-->
+            android:name=".services.AutoStartServiceBroadcastReceiver"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
 
             <intent-filter>
-                <action android:name="com.tereha.MY_AUTO_START" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
