--- a/sample-videochat-webrtc-new/build.gradle
+++ b/sample-videochat-webrtc-new/build.gradle
@@ -32,6 +32,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        speedDev {
+            minSdkVersion 21
+        }
+        dev {
+            minSdkVersion rootProject.minSdkVersion
+        }
+    }
+
 }
 
 dependencies {
